added borders and background color

--- a/resume7.2.html
+++ b/resume7.2.html
@@ -20,7 +20,7 @@
         <picture>
 <source srcset="src\images\Me-small.jpg" media="(max-width: 700px )">
 <source srcset="src\images\Me-medium.jpg" media="(max-width: 1200px )">
-<img src="src\images\Me-large.jpg" alt="waist-up" class="waist-up">
+<img src="src\images\Me-large.jpg" alt="waist-up" class="waist-up" width="400px" height="p">
         </picture>
 
         <!-- Hero Title -->
@@ -70,7 +70,6 @@
                     massa tempor nec feugiat. Aenean pharetra magna ac placerat vestibulum lectus mauris. Duis
                     ultricies lacus sed turpis tincidunt id.</p>
             </div>
-
             <!-- Exp Section -->
             <div class="Experience">
                 <h2 id="experience">Experience</h2>
@@ -118,8 +117,9 @@
 
 
             
-                <h2 id="contact-me">Contact Me:</h2>
-                <div class="contact-me">
+            <h2 id="contact-me">Contact Me:</h2>
+                <div class="form-border">
+                    <div class="contact-me">
                 <div>
                     <img src="src/images/linkedinicon.png" class="LinkedIn">
                     <a href="http://linkedin.com">
@@ -155,7 +155,7 @@
                 <label for="Message">Feedback Message</label>
                 <textarea name="Msg" id="Message" optional></textarea>
                 <button type="submit">Send</button>
-            </form>
+            </form> </div>
     </section>
     </footer>
 
